--- a/QCManagement/Views/Shared/_LayoutMain.cshtml
+++ b/QCManagement/Views/Shared/_LayoutMain.cshtml
@@ -37,6 +37,7 @@
                 <li class="sidebar-brand"> <a href='@Url.Action("Index", "Home")'> صفحه اول </a> </li>
                 <li> <a href='@Url.Action("Qccard", "Qccastt")'>کارت کیفی</a> </li>
                 <li> <a href='@Url.Action("QCReport", "Qccastt")'>گزارشات</a> </li>
+                <li> <a href='@Url.Action("QCSRequest", "QCS")'>درخواست خودروی درجه دو</a> </li>
                 <li> <a href="#">چک لیست آدیت</a> </li>
                 <li> <a href="#">داشبورد</a> </li>
             </ul>
