--- a/QCManagement/Views/Shared/_LayoutMain.cshtml
+++ b/QCManagement/Views/Shared/_LayoutMain.cshtml
@@ -37,7 +37,8 @@
                 <li class="sidebar-brand"> <a href='@Url.Action("Index", "Home")'> صفحه اول </a> </li>
                 <li> <a href='@Url.Action("Qccard", "Qccastt")'>کارت کیفی</a> </li>
                 <li> <a href='@Url.Action("QCReport", "Qccastt")'>گزارشات</a> </li>
-                <li> <a href='@Url.Action("QSCRequest", "QSC")'>درخواست خودروی درجه دو</a> </li>
+                <li> <a href='@Url.Action("QSCRequest", "QSC")'>ثبت درخواست خودروی درجه دو</a> </li> 
+                <li> <a href='@Url.Action("QSCRequest", "QSC")'>بررسی درخواست خودروی درجه دو</a> </li>
             </ul>
         </div> <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
